--- a/package.json
+++ b/package.json
@@ -201,23 +201,25 @@
   },
   "dependencies": {
     "@material-ui/core": "^1.3.0",
-    "activedirectory": "^0.7.2",
     "ajv": "^6.5.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "devtron": "^1.4.0",
     "electron-debug": "^1.5.0",
     "font-awesome": "^4.7.0",
     "history": "^4.7.2",
+    "material-ui": "^1.0.0-beta.47",
     "material-ui-pickers": "^1.0.0-rc.10",
+    "material-ui-schema-form": "^0.9.9",
     "mobx": "^4.3.1",
     "mobx-react": "^5.2.3",
     "mobx-react-router": "^4.0.4",
     "mobx-state-tree": "^2.2.0",
     "moment": "^2.22.2",
     "passport": "^0.4.0",
-    "passport-ldapauth": "^2.0.0",
+    "proptypes": "^1.1.0",
     "react": "^16.4.0",
     "react-big-calendar": "^0.19.2",
+    "react-datetime": "^2.14.0",
     "react-dnd": "^2.6.0",
     "react-dnd-html5-backend": "^2.6.0",
     "react-dom": "^16.4.0",
